First take of the draft screen. Music added at title screen.